deploy/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "ambassador"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /grafana
            #path: /loki/grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
