deploy/tempo-jaeger-ui-ingress.yaml
#apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1beta1

kind: Ingress
metadata:
  name: tempo-jaeger-ui-ingress
  annotations:
    # kubernetes.io/ingress.class: "ambassador"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /jaeger/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /jaeger(/|$)(.*)
            pathType: Prefix
            backend:
              #              service:
              #                name: loki-grafana
              #                port:
              #                  number: 80
              serviceName: tempo-tempo-distributed-query-frontend
              servicePort: 16686
